@startuml
skinparam shadowing false
skinparam line type polyline

'left to right direction

    class RegisterVehicleUI {
        - controller : RegisterVehicleController
        + registerVehicle() : void
    }

    class RegisterVehicleController {
        - repositories: Repositories
        - vehicleRepository : VehicleRepository

        + RegisterVehicleController()
        + registerVehicle(VIN: String, brand: String, model: String, type: String, vehiclePlate: String, \ntareWeight: double, grossWeight: double, currentKm: int, registrationDate: Date, acquisitionDate: Date, maintenanceFrequency: int) : boolean
    }

    class Repositories {
        - instance : Repositories
        - vehicleRepository : VehicleRepository
        - Repositories()
        + getInstance() : Repositories
        + getVehicleRepository() : VehicleRepository
    }

    class VehicleRepository {
        - vehicleList : List<Vehicle>

        + VehicleRepository()
        + getVehicleList () : List<Vehicles>
        + registerVehicle(VIN: String, brand: String, model: String, type: String, vehiclePlate: String, \ntareWeight: double, grossWeight: double, currentKm: int, registrationDate: Date, acquisitionDate: Date, maintenanceFrequency: int) : boolean
        + addVehicle(vehicle: Vehicle) : void
        + verifyExistingVehicle(VIN: String, VehiclePlate: String) : boolean
    }

    class Vehicle {
        - VIN : String
        - brand : String
        - model : String
        - type : String
        - vehiclePlate : String
        - tareWeight : double
        - grossWeight : double
        - currentKm : int
        - registrationDate: Date
        - acquisitionDate : Date
        - maintenanceFrequency : int

        + validateVehicle(vehicle: Vehicle) : boolean
        + Vehicle(VIN: String, brand: String, model: String, type: String, vehiclePlate: String, \ntareWeight: double, grossWeight: double, currentKm: int, registrationDate: Date, acquisitionDate: Date, maintenanceFrequency: int)
    }

RegisterVehicleUI ..> RegisterVehicleController
RegisterVehicleController ..> Repositories: repositories
Repositories --> Repositories: instance
RegisterVehicleController ..> VehicleRepository: vehicleRepository
Repositories --> "1"VehicleRepository: vehicleRepository
VehicleRepository -->"*" Vehicle: vehicle

@enduml
